--- a/src/scss/layout/_onboarding.scss
+++ b/src/scss/layout/_onboarding.scss
@@ -6,6 +6,14 @@
     display: grid;
     grid-template-columns: max-content 1fr;
 
+    @media only screen and (max-width: $bp-600) {
+        grid-template-columns: 1fr;
+    }
+
+    @media only screen and (max-width: $bp-extra_small) {
+        padding: 4rem 1rem;
+    }
+
 
     &__title {
         color: $color-special1;
@@ -50,10 +58,19 @@
 
     &__photo {
         margin-top: 10rem;
+
+        @media only screen and (max-width: $bp-600) {
+            margin-top: 0;
+            justify-self: center;
+        }
     }
 
     &__img {
         width: 50rem;
+
+        @media only screen and (max-width: $bp-extra_large) {
+            width: 20rem;
+        }
     }
 
     &__form {
@@ -61,7 +78,15 @@
         color: $color-special1-dark;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 2rem
+        gap: 2rem;
+
+        @media only screen and (max-width: $bp-small) {
+            grid-template-columns: 1fr;
+        }
+
+        @media only screen and (max-width: $bp-extra_small) {
+            padding: 3rem 1rem;
+        }
     }
 
     &__form-box {
@@ -71,6 +96,10 @@
         // flex-grow: -1;
         display: grid;
         grid-template-columns: max-content;
+
+        @media only screen and (max-width: $bp-small) {
+            grid-template-columns: 1fr;
+        }
 
         &:not(:last-of-type) {
             margin-bottom: 1rem;
@@ -93,6 +122,7 @@
     }
     
     &__input {
+        
     }
 
     &__select {
