--- a/src/scss/layout/_profile.scss
+++ b/src/scss/layout/_profile.scss
@@ -251,6 +251,7 @@
     
     &__info-label {
         // margin-right: 1rem;
+        user-select: none;
         color: $color-special1-dark;
     }
     
