--- a/src/scss/components/_error-msg.scss
+++ b/src/scss/components/_error-msg.scss
@@ -17,10 +17,23 @@
         flex-direction: column;
         align-items: center;
         border-radius: 20px;
+        padding: 3rem 1rem;
+    }
+
+    &__icon {
+        margin: 2rem;
+        width: 6rem;
+        height: 6rem;
+        fill: $color-special1;
+
+        &--error {
+            fill: $color-special2;
+        }
+
     }
 
     &__message {
-        margin: 5rem 1rem;
+        margin-bottom: 2rem;
         color: $color-special1;
         font-size: 2rem;
 
